force-app/main/default/objects/User__c/User__c.object-meta.xml
<CustomObject>
    <label>User</label>
    <nameField>
        <displayFormat>User Id-{000}</displayFormat>
        <label>User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>