force-app/main/default/objects/User__c/fields/Last_Redemption_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Redemption_Date__c</fullName>
    <label>Last Redemption Date</label>
    <type>Date</type>
</CustomField>