force-app/main/default/objects/User__c/fields/Redemption_Points__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Points__c</fullName>
    <label>Redemption Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>