force-app/main/default/objects/User__c/fields/Total_points__c.field-meta.xml
<CustomField>
    <fullName>Total_points__c</fullName>
    <label>Total points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>