force-app/main/default/objects/User__c/fields/User_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Address__c</fullName>
    <label>User Address</label>
    <type>TextArea</type>
</CustomField>