force-app/main/default/objects/User__c/fields/User_Liginname__c.field-meta.xml
<CustomField>
    <fullName>User_Liginname__c</fullName>
    <label>User Loginname</label>
    <length>20</length>
    <type>Text</type>
</CustomField>