force-app/main/default/objects/User__c/fields/User_Points_Last_Reimburse_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Points_Last_Reimburse_Date__c</fullName>
    <label>User Points Last Reimburse Date</label>
    <type>Date</type>
</CustomField>