force-app/main/default/objects/User__c/fields/User_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>User_s_Last_Name__c</fullName>
    <label>User&apos;s Last Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>