force-app/main/default/objects/User__c/validationRules/Total_Points_can_not_be_less_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Points_can_not_be_less_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Total_points__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_points__c</errorDisplayField>
    <errorMessage>Total points can not less than 0</errorMessage>
</ValidationRule>